k8s-basics/examples/chapter-09/basic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-world
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 80
      - path: /hello-kubernetes
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-service
            port:
              number: 80
